--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,9 @@ a.active hr {
   font-weight: 400;
   font-style: normal;
 }
+@media (max-width: 64px) {
+  a.active {
+    background-color: black;
+    color: white;
+  }
+}
